# experiments

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  readme.md
src/: main.cpp  main.hpp  main.manifest  main.rc  response.cpp  response.hpp
